--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
     "react": "18.2.0",
     "react-native": "0.72.7",
     "react-native-dotenv": "^3.4.9",
+    "react-native-flipper": "^0.212.0",
     "react-native-keychain": "^8.1.2",
     "react-native-mmkv": "^2.10.2",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-vector-icons": "^10.0.0",
     "react-redux": "^8.1.2",
+    "redux-flipper": "^2.0.2",
     "redux-persist": "^6.0.0",
     "yup": "^1.2.0"
   },
