--- a/package.json
+++ b/package.json
@@ -28,23 +28,34 @@
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-native": "0.72.7",
+    "react-native-biometrics": "^3.0.1",
+    "react-native-device-info": "^10.11.0",
     "react-native-dotenv": "^3.4.9",
-    "react-native-flipper": "^0.212.0",
+    "react-native-fast-image": "^8.6.3",
     "react-native-keychain": "^8.1.2",
-    "react-native-mmkv": "^2.10.2",
-    "react-native-safe-area-context": "^4.7.2",
+    "react-native-maps": "^1.8.0",
+    "react-native-mmkv": "^2.11.0",
+    "react-native-modal": "^13.0.1",
+    "react-native-reanimated": "^3.6.0",
+    "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.25.0",
-    "react-native-vector-icons": "^10.0.0",
+    "react-native-signature-canvas": "^4.7.1",
+    "react-native-svg": "^14.0.0",
+    "react-native-svg-transformer": "^1.1.0",
+    "react-native-toast-notifications": "^3.4.0",
+    "react-native-vector-icons": "^10.0.2",
     "react-redux": "^8.1.2",
-    "redux-flipper": "^2.0.2",
+    "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
     "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
-    "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-async-storage/async-storage": "^1.20.0",
     "@react-native-community/datetimepicker": "^7.6.0",
     "@react-native-community/slider": "^4.4.3",
     "@react-native/eslint-config": "^0.72.2",
@@ -77,7 +88,9 @@
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^3.0.2",
     "react-dom": "18.2.0",
+    "react-native-flipper": "^0.212.0",
     "react-test-renderer": "18.2.0",
+    "redux-flipper": "^2.0.2",
     "typescript": "4.8.4",
     "yarn-audit-fix": "^10.0.1"
   },
